# ReminderBot

./: .gitmodules  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: menus.py  telegram.py  telegram_api.py
src/db/: __init__.py  ctx.py  models.py
src/processors/: old_messages_remover.py  reminder_processor.py
