[tool.poetry]
name = "reminderbot"
version = "0.1.0"
description = "If you are tired by forgetting important things to do, as pay taxes, or feed the cat, just start using my bot!"
authors = ["Timoteo <tim-ef@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
ujson = "^4.0.2"
python-telegram-bot = "^13.7"
SQLAlchemy = "^1.4.20"
python-dateutil = "^2.8.1"
cachetools = "^4.2.2"

[tool.poetry.dev-dependencies]
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
